# sfml_game

./: .exrc  .gitignore  CMakeLists.txt  Leiame.txt  Makefile  README.md
.github/workflows/: build_test.yml
UML/: Jogo2UML.mdj  JogoUML.mdj
assets/level/: destroyed_world.json  tile_sprites.json
assets/map/: destroyed_world.json  platform.json  platform2.json  tile_sprites.json  tile_sprites.xcf
assets/phase/: sorcerer_castle.json
assets/player/: save_state.json
contents/map/: black_brick.json  black_brick.tsx  empty_block.tsx  hard_block.tsx  note_block.json  platform.json  platform.tmx  tile_sprites.json  wood_block.json  wood_block.tsx
include/: config.h.in  game.hpp  map.hpp  player.hpp  tile.hpp
include/Managers/: collider.hpp
include/animation/: animation.hpp
include/collider/: collider.hpp
include/controllers/: animation.hpp  collider.hpp  main_menu.hpp  menu.hpp  sub_menu.hpp  window_server.hpp
include/entities/: character.hpp  coin.hpp  entity.hpp  fireBall.h  image.hpp  obstacle.hpp  platform.hpp  player.hpp  spike.hpp  text.hpp  wall.hpp
include/game/: entie.hpp  entity.hpp  game.hpp  main_menu.hpp  menu.hpp  sub_menu.hpp
include/levels/: layer.hpp  level.hpp  level1.hpp  level2.hpp  locations.hpp  object.hpp  platforms.hpp  tilemap.hpp  tiles.hpp  tileset.hpp  tilesetwrapper.hpp  walls.hpp
include/listas/: Elemento.h  Lista.h  ListaEntities.h
include/managers/: animation.hpp  collider.hpp  collision_manager.hpp  graphic_manager.hpp
include/map/: layer.hpp  map.hpp  tile.hpp  tilemap.hpp  tileset.hpp  tilesetmap.hpp
include/maps/: layer.hpp  locations.hpp  map.hpp  object.hpp  platforms.hpp  tile.hpp  tilemap.hpp  tiles.hpp  tileset.hpp  tilesetmap.hpp  walls.hpp
include/menus/: main_menu.hpp  menu.hpp  sub_menu.hpp
include/player/: player.hpp
include/rapidjson/: document.h  rapidjson.h  reader.h  schema.h
src/: Player.cpp  game.cpp  main.cpp  map.cpp  player.cpp  tile.cpp
src/animation/: animation.cpp
src/collider/: collider.cpp
src/controllers/: animation.cpp  collider.cpp  main_menu.cpp  menu.cpp  sub_menu.cpp  window_server.cpp
src/entities/: character.cpp  coin.cpp  enemy.cpp  entity.cpp  image.cpp  obstacle.cpp  platform.cpp  player.cpp  spike.cpp  text.cpp  wall.cpp
src/game/: entie.cpp  entity.cpp  game.cpp  main_menu.cpp  menu.cpp  sub_menu.cpp  window_server.cpp
src/levels/: layer.cpp  level.cpp  level1.cpp  level2.cpp  locations.cpp  object.cpp  platforms.cpp  tilemap.cpp  tiles.cpp  tileset.cpp  walls.cpp  (+1 more)
(+130 files in other folders)
